--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "react-native-smart-cache",
   "version": "1.1.0",
+  "description": "A lightweight caching library for React Native (API, images, videos, JSON).",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aamiryameen/react-native-smart-cache.git"
+  },
+  "keywords": [
+    "react-native",
+    "cache",
+    "storage",
+    "images",
+    "videos",
+    "asyncstorage",
+    "filesystem"
+  ],
+  "author": "Aamir Yameen <aamiryameen065@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aamiryameen/react-native-smart-cache/issues"
+  },
+  "homepage": "https://github.com/aamiryameen/react-native-smart-cache#readme",
   "peerDependencies": {
     "react": ">=17.0.0",
     "react-native": ">=0.64.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-native": "^0.72.0"
   }
 }
